--- a/composer.json
+++ b/composer.json
@@ -1,34 +1,46 @@
 {
-  "name": "s3bul/curl-client",
-  "description": "Curl client for PHP",
-  "version": "0.1.0",
-  "keywords": [
-    "PHP",
-    "cURL"
-  ],
-  "minimum-stability": "stable",
-  "homepage": "https://github.com/s3bul/curl-client",
-  "license": "MIT",
-  "type": "library",
-  "authors": [
-    {
-      "name": "Sebastian Korzeniecki",
-      "email": "seba5zer@gmail.com"
+    "name": "s3bul/curl-client",
+    "description": "Curl client for PHP",
+    "version": "0.1.0",
+    "keywords": [
+        "PHP",
+        "cURL"
+    ],
+    "minimum-stability": "stable",
+    "homepage": "https://github.com/s3bul/curl-client",
+    "license": "MIT",
+    "type": "library",
+    "authors": [
+        {
+            "name": "Sebastian Korzeniecki",
+            "email": "seba5zer@gmail.com"
+        }
+    ],
+    "require": {
+        "ext-curl": "*",
+        "guzzlehttp/psr7": "^2.4"
+    },
+    "config": {
+        "sort-packages": true
+    },
+    "autoload": {
+        "psr-4": {
+            "S3bul\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
+    },
+    "scripts": {
+        "safe-update": [
+            "composer update --no-interaction --no-ansi --ignore-platform-reqs"
+        ]
+    },
+    "require-dev": {
+        "codeception/codeception": "^5.0",
+        "codeception/module-asserts": "*",
+        "codeception/module-phpbrowser": "*"
     }
-  ],
-  "require": {
-  },
-  "config": {
-    "sort-packages": true
-  },
-  "autoload": {
-    "psr-4": {
-      "S3bul\\": "src/"
-    }
-  },
-  "scripts": {
-    "safe-update": [
-      "composer update --no-interaction --no-ansi --ignore-platform-reqs"
-    ]
-  }
 }
