--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -41,7 +41,7 @@ jobs:
       run: composer install --prefer-dist --no-progress
 
     - name: Run phpstan
-      run: vendor/bin/phpstan analyse
+      run: vendor/bin/phpstan analyse --xdebug
 
     - name: Run codeception
       env:
