--- a/phpstan.neon
+++ b/phpstan.neon
@@ -3,8 +3,6 @@ parameters:
   paths:
   - src
   - tests
-  excludePaths:
-  - tests/_output/*
-  - tests/Support/*
-  stubFiles:
-  - tests/Support/*
+#  excludePaths:
+#  - tests/_output/*
+#  - tests/Support/*
