--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -40,10 +40,13 @@ jobs:
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress
 
+    - name: Init codeception
+      run: vendor/bin/codecept bootstrap -n
+
+    - name: Run phpstan
+      run: vendor/bin/phpstan analyse --xdebug
+
     - name: Run codeception
       env:
         TEST_API_TOKEN: ${{ secrets.TEST_API_TOKEN }}
       run: vendor/bin/codecept run
-
-    - name: Run phpstan
-      run: vendor/bin/phpstan analyse --xdebug
