--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -46,4 +46,4 @@ jobs:
       run: vendor/bin/codecept run
 
     - name: Run phpstan
-      run: vendor/bin/phpstan analyse --xdebug
+      run: vendor/bin/phpstan analyse --no-progress --xdebug
