--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "s3bul/curl-psr7",
   "description": "Curl client with PSR-7 for PHP",
-  "version": "0.4.2",
+  "version": "0.5.0",
   "keywords": [
     "PHP",
     "cURL",
@@ -26,7 +26,7 @@
     "codeception/codeception": "^5.0",
     "codeception/module-asserts": "*",
     "codeception/module-phpbrowser": "*",
-    "phpstan/phpstan": "^1.9"
+    "phpstan/phpstan": "^1.10"
   },
   "config": {
     "sort-packages": true
@@ -38,7 +38,7 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "S3bul\\Tests\\CurlPsr7\\": "tests/"
+      "S3bul\\CurlPsr7\\Tests\\": "tests/"
     }
   },
   "scripts": {
