--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -42,6 +42,7 @@ jobs:
 
     - name: Run codeception
       env:
+        TEST_API_URI: ${{ secrets.TEST_API_URI }}
         TEST_API_TOKEN: ${{ secrets.TEST_API_TOKEN }}
       run: vendor/bin/codecept run
 
