--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -47,4 +47,4 @@ jobs:
       run: vendor/bin/codecept run
 
     - name: Run phpstan
-      run: vendor/bin/phpstan analyse --no-progress --xdebug
+      run: vendor/bin/phpstan analyse --no-progress
