--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -42,8 +42,9 @@ jobs:
 
     - name: Run codeception
       env:
+        TEST_API_URI: ${{ vars.TEST_API_URI }}
         TEST_API_TOKEN: ${{ secrets.TEST_API_TOKEN }}
       run: vendor/bin/codecept run
 
     - name: Run phpstan
-      run: vendor/bin/phpstan analyse --no-progress --xdebug
+      run: vendor/bin/phpstan analyse --no-progress
